<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="@color/colorBackground"
    tools:context=".Trip_List_Activity"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout"/>

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/trip_list"
        android:textAllCaps="false"
        android:textAppearance="@android:style/TextAppearance.StatusBar.Title"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="casual" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        android:text="@string/from"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:fontFamily="@font/andada" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        android:text="@string/to"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:fontFamily="@font/andada" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        android:text="@string/date"
        android:textColor="@android:color/black"
        android:textSize="18sp"

        app:fontFamily="@font/andada" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/colortrip"/>
    </ScrollView>


</LinearLayout>