<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Trip_List_Activity"
    tools:background="@color/colorBackground"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout"/>

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/contact_us"
        android:textAllCaps="false"
        android:textAppearance="@android:style/TextAppearance.StatusBar.Title"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="casual" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/help_us_to_improve"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:fontFamily="@font/andada" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="48dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/facebook_icon" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/taxitalk_facebook"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="@font/bad_script" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/twitter_icon2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/taxitalk_twitter"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="@font/bad_script" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">


        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/insta_icon" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/taxitalk_instagram"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="@font/bad_script" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">


        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/gmail_icon" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/taxitalk_gmail"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="@font/bad_script" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/location" />


</LinearLayout>